--- a/index.css
+++ b/index.css
@@ -2,11 +2,47 @@
     margin: 0;
     
 }
+body{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+}
 #display{
     display: flex;
     justify-content: center;
-    font-size:40px;
-    margin-top: 30px;
+    align-items:center;
+
+    font-size:60px;
+    /* margin-top: 30px; */
+    border: 1px solid grey;
+    width: 55vw;
+    height:15vh;
+    background-color:rgb(250, 86, 113);
+    border-radius:8px;
+    overflow: hidden;
+    color:grey;
+    box-shadow: 3px 3px 16px 0px rgba(243,156,156,0.75);
+-webkit-box-shadow: 3px 3px 16px 0px rgba(243,156,156,0.75);
+-moz-box-shadow: 3px 3px 16px 0px rgba(243,156,156,0.75);
+
+}
+.main{
+    border: 1px solid grey;
+    height: 50vh;
+    width:40vw;
+    display: flex;
+    justify-content:center; 
+    align-items:center;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    background-color:rgb(145, 238, 238);
+    border-radius:10px;
+
+
 }
 #header{
     display: flex;
@@ -21,9 +57,21 @@
     display: flex;
     justify-content: center;
     margin-top: 8px;
+    padding: 10px;
 }
 .lastrow{
     margin: 2px;
     cursor: pointer;
-    padding: 3.5px;
+    padding: 10px;
+    font-size:20px;
+margin: 8%;
+border-radius:10px;
+border: 0.1px solid lightgrey;
+}
+.lastrow:hover{
+    background-color:gainsboro;
+    box-shadow: 3px 3px 16px -5px rgba(243,156,156,0.75);
+    -webkit-box-shadow: 3px 3px 16px -5px rgba(243,156,156,0.75);
+    -moz-box-shadow: 3px 3px 16px -5px rgba(243,156,156,0.75);
+    color:grey;
 }
